recursion.lessons.recursion.tree.Tree.scala.error
Tree:13: error: not found: value s
while(s!=0){
      ^Tree:14: error: not enough arguments for method tree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters steps, length, angle, ...
	tree()
            ^